--- a/activities/index.html
+++ b/activities/index.html
@@ -69,8 +69,7 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <h1>PICK AN ACTIVITY!!</h1>
-<h3>You can use <a href="https://cubnavarro.github.io/Tri2GroupFastpages/markdown/"><button>THIS</button></a> to plan your activities!</h3>
+        <h1>On This Day: What Happened?</h1>
 
 <html>
 <body>
@@ -78,11 +77,17 @@ window.onload = wrap_img;
 
 <table style="width:100%" id="table">
   <tr>
-    <th>Below are activities you can choose to do!</th>
+    <th>Interesting Event that has happened on a day of this Week</th>
   </tr>
 </table>
 
+
+
+
 <script>
+
+
+
 
 var requestOptions = {
   method: 'GET',
@@ -90,22 +95,27 @@ var requestOptions = {
 };
 
 
-fetch("https://finalcptperiod4.duckdns.org/api/activities", requestOptions)
+fetch("https://fnvs.duckdns.org/api/fact", requestOptions)
   .then(response => response.json())
   .then(r => {
   r.forEach(ev => {
     const row = document.createElement("tr")
     const data = document.createElement("td")
-    data.innerHTML = `${ev.activity}, ${ev.address}: ${ev.fun}`
+    data.innerHTML = `${ev.date}, ${ev.year}: ${ev.fact}`
     row.appendChild(data)
     document.getElementById("table").appendChild(row)
   })
   })
   .catch(error => console.log('error', error))
 
+
+
+
 function reset() {
   window.location.reload();
 }
+
+
 
 
 </script>
@@ -114,7 +124,8 @@ function reset() {
 <table>
   <thead>
   <tr>
-    <th>New Activity</th>
+    <th>User ID</th>
+    <th>New Fact for this Week</th>
   </tr>
   </thead>
   <tbody id="result">
@@ -128,7 +139,7 @@ function reset() {
 
 const resultContainer = document.getElementById("result");
   // prepare URL's to allow easy switch from deployment and localhost
-const url = "https://finalcptperiod4.duckdns.org/api/activities/"
+const url = "https://fnvs.duckdns.org/api/fact"
   //const url = "https://flask.nighthawkcodingsociety.com/api/users"
 const create_fetch = url + '/create';
 const read_fetch = url + '/';
@@ -183,10 +194,10 @@ function read_users() {
 
 <form action="javascript:create_user()">
  <p><label>
-        Tell Us an Activity You Did!
-        <input type="text" name="activity" id="activity" placeholder="Activity" required="" />
-        <input type="text" name="activity" id="address" placeholder="Address" required="" />
-        <input type="text" name="activity" id="fun" placeholder="Fun out of 10" required="" />
+        Tell Us Something that Happened on Your Favorite Day!
+        <input type="text" name="fact" id="fact" placeholder="fact" required="" />
+        <input type="text" name="fact" id="date" placeholder="day/month" required="" />
+        <input type="number" name="fact" id="year" placeholder="year" required="" />
 
 
     </label></p>
@@ -196,15 +207,15 @@ function read_users() {
 
 <script>
   function create_user() {
-    fetch("https://finalcptperiod4.duckdns.org/api/activities/create", {
+    fetch("https://fnvs.duckdns.org/api/fact/create", {
       method: 'POST',
       headers: {
         'Content-Type': 'application/json'
       },
-      body: JSON.stringify({activity:document.getElementById("activity").value,address:document.getElementById("address").value,fun:document.getElementById("fun").value})
+      body: JSON.stringify({fact:document.getElementById("fact").value,date:document.getElementById("date").value,year:document.getElementById("year").valueAsNumber})
     }).then(e => console.log(
      
-     
+      "yay"
     ));
   }
 </script>
@@ -214,7 +225,6 @@ function read_users() {
 
 
 </html>
-
 
       </div>
     </main><footer class="site-footer h-card">
