--- a/activities/index.html
+++ b/activities/index.html
@@ -212,7 +212,7 @@ function read_users() {
       headers: {
         'Content-Type': 'application/json'
       },
-      body: JSON.stringify({activity:document.getElementById("activity").value,address:document.getElementById("address").value,fun:document.getElementById("fun").valueAsNumber})
+      body: JSON.stringify({activity:document.getElementById("activity").value,address:document.getElementById("address").value,fun:document.getElementById("fun").value})
     }).then(e => console.log(
      
       "yay"
