deploy: cd327c513ee7728fd5c1af3680629e9a6e49c7f8

--- a/activities/index.html
+++ b/activities/index.html
@@ -139,7 +139,7 @@ function reset() {
 
 const resultContainer = document.getElementById("result");
   // prepare URL's to allow easy switch from deployment and localhost
-const url = "https://finalcptperiod4.duckdns.org/api/active"
+const url = "https://finalcptperiod4.duckdns.org"
   //const url = "https://flask.nighthawkcodingsociety.com/api/users"
 const create_fetch = url + '/create';
 const read_fetch = url + '/';
@@ -197,7 +197,7 @@ function read_users() {
         Tell Us Something that Happened on Your Favorite Day!
         <input type="text" name="activity" id="activity" placeholder="activity" required="" />
         <input type="text" name="activity" id="address" placeholder="address" required="" />
-        <input type="number" name="activity" id="fun" placeholder="fun" required="" />
+        <input type="text" name="activity" id="fun" placeholder="fun" required="" />
 
 
     </label></p>
