deploy: 7a90cfe464eb19f654b14621c93438085a16d653

--- a/data/activities.html
+++ b/data/activities.html
@@ -83,6 +83,7 @@ window.onload = wrap_img;
 
 <script>
 
+
 var requestOptions = {
   method: 'GET',
   redirect: 'follow'
@@ -95,25 +96,18 @@ fetch("https://finalcptperiod4.duckdns.org/api/activities/", requestOptions)
   r.forEach(ev => {
     const row = document.createElement("tr")
     const data = document.createElement("td")
-    data.innerHTML = `${ev.address}, ${ev.fun}: ${ev.activity}`
+    data.innerHTML = `${ev.activity}, ${ev.adress}: ${ev.fun}`
     row.appendChild(data)
     document.getElementById("table").appendChild(row)
   })
   })
   .catch(error => console.log('error', error))
 
-
-
-
 function reset() {
   window.location.reload();
 }
 
-
-
-
 </script>
-
 
 <table>
   <thead>
@@ -133,14 +127,14 @@ function reset() {
 
 const resultContainer = document.getElementById("result");
   // prepare URL's to allow easy switch from deployment and localhost
-const url = "https://finalcptperiod4.duckdns.org/api/activities"
+ var url = "https://finalcptperiod4.duckdns.org/api/activities"
   //const url = "https://flask.nighthawkcodingsociety.com/api/users"
 const create_fetch = url + '/create';
 const read_fetch = url + '/';
 read_users();
 
-  // Display User Table, data is fetched from Backend Database
-  function read_users() {
+
+function read_users() {
     // prepare fetch options
     const read_options = {
       method: 'GET', // *GET, POST, PUT, DELETE, etc.
@@ -150,9 +144,7 @@ read_users();
       headers: {
         'Content-Type': 'application/json'
       },
-    };
-
-    // fetch the data from API
+    };     // fetch the data from API
     fetch(read_fetch, read_options)
       // response is a RESTful "promise" on any successful fetch
       .then(response => {
@@ -164,7 +156,6 @@ read_users();
             const td = document.createElement("td");
             td.innerHTML = errorMsg;
             tr.appendChild(td);
-            resultContainer.appendChild(tr);
             return;
         }
         // valid response will have json data
@@ -176,7 +167,7 @@ read_users();
             }
         })
     })
-    // catch fetch errors (ie ACCESS to server blocked)
+      // catch fetch errors (ie ACCESS to server blocked)
     .catch(err => {
       console.error(err);
       const tr = document.createElement("tr");
@@ -203,50 +194,23 @@ read_users();
 
 
 <script>
-  fetch(create_fetch, requestOptions)
-      .then(response => {
-        // trap error response from Web API
-        if (response.status !== 200) {
-          const errorMsg = 'Database create error: ' + response.status;
-          console.log(errorMsg);
-          const tr = document.createElement("tr");
-          const td = document.createElement("td");
-          td.innerHTML = errorMsg;
-          tr.appendChild(td);
-          resultContainer.appendChild(tr);
-          return;
-        }
-        // response contains valid result
-        response.json().then(data => {
-            console.log(data);
-            //add a table row for the new/created userid
-            add_row(data);
-        })
-    })
-
-  function add_row(data) {
-    const tr = document.createElement("tr");
-    const activity = document.createElement("td");
-    const address = document.createElement("td");
-    const fun = document.createElement("td");
-  
-
-    // obtain data that is specific to the API
-    activity.innerHTML = data.activity; 
-    address.innerHTML = data.address; 
-    fun.innerHTML = data.fun; 
-
-    // add HTML to container
-    tr.appendChild(activity);
-    tr.appendChild(address);
-    tr.appendChild(fun);
-
-    resultContainer.appendChild(tr);
+  function create_user() {
+    fetch("https://finalcptperiod4.duckdns.org/api/activities/create", {
+      method: 'POST',
+      headers: {
+        'Content-Type': 'application/json'
+      },
+      body: JSON.stringify({activity:document.getElementById("activity").value,address:document.getElementById("address").value,fun:document.getElementById("fun").value})
+    }).then(e => console.log(
+     
+      "yay"
+    ));
   }
-
 </script>
 
+
 </body>
+
 
 </html>
 
