deploy: 4589fd6f22a1d75b8ed22efd2e03e3994990455b

--- a/data/activities.html
+++ b/data/activities.html
@@ -74,6 +74,7 @@ window.onload = wrap_img;
 <html>
 <body>
 
+
 <table style="width:100%" id="table">
   <tr>
     <th>Interesting Event that has happened on a day of this Week</th>
@@ -81,6 +82,7 @@ window.onload = wrap_img;
 </table>
 
 <script>
+
 
 var requestOptions = {
   method: 'GET',
@@ -181,9 +183,9 @@ function read_users() {
 <form action="javascript:create_user()">
  <p><label>
         Tell Us Something that Happened on Your Favorite Day!
-        <input type="text" name="activity" id="activity" placeholder="activity" required="" />
-        <input type="text" name="activity" id="address" placeholder="address" required="" />
-        <input type="text" name="activity" id="fun" placeholder="fun" required="" />
+        <input type="text" name="activity" id="activity" placeholder="Activity" required="" />
+        <input type="text" name="activity" id="address" placeholder="Address" required="" />
+        <input type="text" name="activity" id="fun" placeholder="Fun" required="" />
 
 
     </label></p>
