--- a/data/activities.html
+++ b/data/activities.html
@@ -127,7 +127,7 @@ function reset() {
 
 const resultContainer = document.getElementById("result");
   // prepare URL's to allow easy switch from deployment and localhost
- var url = "https://finalcptperiod4.duckdns.org/api/activities"
+const url = "https://finalcptperiod4.duckdns.org/api/activities"
   //const url = "https://flask.nighthawkcodingsociety.com/api/users"
 const create_fetch = url + '/create';
 const read_fetch = url + '/';
@@ -186,8 +186,6 @@ function read_users() {
         <input type="text" name="activity" id="activity" placeholder="Activity" required="" />
         <input type="text" name="activity" id="address" placeholder="Address" required="" />
         <input type="text" name="activity" id="fun" placeholder="Fun" required="" />
-
-
     </label></p>
     <p><button>Add</button></p>
 </form>
