deploy: 72fa231b0fc893efe121f6c8928719cf629faa76

--- a/data/activities.html
+++ b/data/activities.html
@@ -81,7 +81,12 @@ window.onload = wrap_img;
   </tr>
 </table>
 
+
+
+
 <script>
+
+
 
 
 var requestOptions = {
@@ -90,30 +95,37 @@ var requestOptions = {
 };
 
 
-fetch("https://finalcptperiod4.duckdns.org/api/activities/", requestOptions)
+fetch("https://finalcptperiod4.duckdns.org/api/activities", requestOptions)
   .then(response => response.json())
   .then(r => {
   r.forEach(ev => {
     const row = document.createElement("tr")
     const data = document.createElement("td")
-    data.innerHTML = `${ev.activity}, ${ev.address}: ${ev.fun}`
+    data.innerHTML = `${ev.date}, ${ev.year}: ${ev.fact}`
     row.appendChild(data)
     document.getElementById("table").appendChild(row)
   })
   })
   .catch(error => console.log('error', error))
 
+
+
+
 function reset() {
   window.location.reload();
 }
 
+
+
+
 </script>
+
 
 <table>
   <thead>
   <tr>
     <th>User ID</th>
-    <th>New activity for this Week</th>
+    <th>New Fact for this Week</th>
   </tr>
   </thead>
   <tbody id="result">
@@ -183,9 +195,11 @@ function read_users() {
 <form action="javascript:create_user()">
  <p><label>
         Tell Us Something that Happened on Your Favorite Day!
-        <input type="text" name="activity" id="activity" placeholder="Activity" required="" />
-        <input type="text" name="activity" id="address" placeholder="Address" required="" />
-        <input type="text" name="activity" id="fun" placeholder="Fun" required="" />
+        <input type="text" name="fact" id="fact" placeholder="fact" required="" />
+        <input type="text" name="fact" id="date" placeholder="day/month" required="" />
+        <input type="number" name="fact" id="year" placeholder="year" required="" />
+
+
     </label></p>
     <p><button>Add</button></p>
 </form>
@@ -198,7 +212,7 @@ function read_users() {
       headers: {
         'Content-Type': 'application/json'
       },
-      body: JSON.stringify({activity:document.getElementById("activity").value,address:document.getElementById("address").value,fun:document.getElementById("fun").value})
+      body: JSON.stringify({fact:document.getElementById("fact").value,date:document.getElementById("date").value,year:document.getElementById("year").valueAsNumber})
     }).then(e => console.log(
      
       "yay"
