--- a/data/activities.html
+++ b/data/activities.html
@@ -101,7 +101,7 @@ fetch("https://finalcptperiod4.duckdns.org/api/activities", requestOptions)
   r.forEach(ev => {
     const row = document.createElement("tr")
     const data = document.createElement("td")
-    data.innerHTML = `${ev.date}, ${ev.year}: ${ev.fact}`
+    data.innerHTML = `${ev.address}, ${ev.fun}: ${ev.activity}`
     row.appendChild(data)
     document.getElementById("table").appendChild(row)
   })
@@ -125,7 +125,7 @@ function reset() {
   <thead>
   <tr>
     <th>User ID</th>
-    <th>New Fact for this Week</th>
+    <th>New activity for this Week</th>
   </tr>
   </thead>
   <tbody id="result">
@@ -195,9 +195,9 @@ function read_users() {
 <form action="javascript:create_user()">
  <p><label>
         Tell Us Something that Happened on Your Favorite Day!
-        <input type="text" name="fact" id="fact" placeholder="fact" required="" />
-        <input type="text" name="fact" id="date" placeholder="day/month" required="" />
-        <input type="number" name="fact" id="year" placeholder="year" required="" />
+        <input type="text" name="activity" id="activity" placeholder="activity" required="" />
+        <input type="text" name="activity" id="address" placeholder="day/month" required="" />
+        <input type="text" name="activity" id="fun" placeholder="fun" required="" />
 
 
     </label></p>
@@ -212,7 +212,7 @@ function read_users() {
       headers: {
         'Content-Type': 'application/json'
       },
-      body: JSON.stringify({fact:document.getElementById("fact").value,date:document.getElementById("date").value,year:document.getElementById("year").valueAsNumber})
+      body: JSON.stringify({activity:document.getElementById("activity").value,address:document.getElementById("address").value,fun:document.getElementById("fun").value})
     }).then(e => console.log(
      
       "yay"
