--- a/data/activities.html
+++ b/data/activities.html
@@ -64,7 +64,7 @@ window.onload = wrap_img;
           </span>
         </label>
 
-        <div class="trigger"><a class="page-link" href="/Tri2GroupFastpages/_pages/Review.html">Reviews Page</a><a class="page-link" href="/Tri2GroupFastpages/markdown/">Schedule Maker</a><a class="page-link" href="/Tri2GroupFastpages/data/activities">Activities</a><a class="page-link" href="/Tri2GroupFastpages/map/">Near Me Finder</a><a class="page-link" href="/Tri2GroupFastpages/data/database">Add/Explore Houses</a><a class="page-link" href="/Tri2GroupFastpages/forma/">Pick Your House!</a><a class="page-link" href="/Tri2GroupFastpages/categories/">Tags</a></div>
+        <div class="trigger"><a class="page-link" href="/Tri2GroupFastpages/_pages/Review.html">Reviews Page</a><a class="page-link" href="/Tri2GroupFastpages/markdown/">Schedule Maker</a><a class="page-link" href="/Tri2GroupFastpages/data/activities">Activities</a><a class="page-link" href="/Tri2GroupFastpages/data/database">Add/Explore Houses</a><a class="page-link" href="/Tri2GroupFastpages/forma/">Pick Your House!</a><a class="page-link" href="/Tri2GroupFastpages/categories/">Tags</a></div>
       </nav></div>
 </header>
 <main class="page-content" aria-label="Content">
@@ -195,9 +195,9 @@ function read_users() {
 <form action="javascript:create_user()">
  <p><label>
         Tell Us Something that Happened on Your Favorite Day!
-        <input type="text" name="activity" id="activity" placeholder="activity" required="" />
-        <input type="text" name="activity" id="address" placeholder="day/month" required="" />
-        <input type="text" name="activity" id="fun" placeholder="fun" required="" />
+        <input type="text" name="activity" id="activity" placeholder="Activity Name" required="" />
+        <input type="text" name="activity" id="address" placeholder="Address" required="" />
+        <input type="text" name="activity" id="fun" placeholder="Fun out of 10" required="" />
 
 
     </label></p>
