deploy: 43cbc11fab8d66b406b45059212503dba053c9fd

--- a/data/activities.html
+++ b/data/activities.html
@@ -69,7 +69,7 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <h1>On This Day: What Happened?</h1>
+        <h1>Explore Activities To Do and You Can Use <a href="https://cubnavarro.github.io/Tri2GroupFastpages/markdown/" class="button">THIS</a> To Plan Your Activities </h1>
 
 <html>
 <body>
@@ -77,17 +77,11 @@ window.onload = wrap_img;
 
 <table style="width:100%" id="table">
   <tr>
-    <th>Interesting Event that has happened on a day of this Week</th>
+    <th>An Activity That You Participated In</th>
   </tr>
 </table>
 
-
-
-
 <script>
-
-
-
 
 var requestOptions = {
   method: 'GET',
@@ -101,25 +95,18 @@ fetch("https://finalcptperiod4.duckdns.org/api/activities", requestOptions)
   r.forEach(ev => {
     const row = document.createElement("tr")
     const data = document.createElement("td")
-    data.innerHTML = `${ev.address}, ${ev.fun}: ${ev.activity}`
+    data.innerHTML = `${ev.activity}, ${ev.address}: ${ev.fun}`
     row.appendChild(data)
     document.getElementById("table").appendChild(row)
   })
   })
   .catch(error => console.log('error', error))
 
-
-
-
 function reset() {
   window.location.reload();
 }
 
-
-
-
 </script>
-
 
 <table>
   <thead>
@@ -192,7 +179,7 @@ function read_users() {
 
 <form action="javascript:create_user()">
  <p><label>
-        Tell Us Something that Happened on Your Favorite Day!
+        List An Activity That You Liked or Disliked!
         <input type="text" name="activity" id="activity" placeholder="Activity Name" required="" />
         <input type="text" name="activity" id="address" placeholder="Address" required="" />
         <input type="text" name="activity" id="fun" placeholder="Fun out of 10" required="" />
